fix(combobox): restore min-width: 0 on .widget-combobox to preserve multiselect tag wrapping

--- a/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
+++ b/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
@@ -19,6 +19,7 @@ $cb-skeleton-dark: #d2d2d2;
 
 .widget-combobox {
     flex-grow: 1;
+    min-width: 0;
     position: relative;
     transition: color 150ms ease 0s;
     &-menu {
